--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">2023년에 이룰 다짐!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center done"> 학원 정하기</div>
+        <div class="bucket img1 center"> 학원 정하기</div>
         <div class="bucket img2 center"> 프론트엔드 할지 백엔드 할지 정하기</div>
         <div class="bucket img1 center">포트폴리오 <br>& <br>자소서 만들기</div>
         <div class="bucket img2 center">운동하기</div>
